Fix logo cutoff

--- a/www/css/default.css
+++ b/www/css/default.css
@@ -75,13 +75,13 @@ abbr {
 
 #header {
     background: #666 url(../images/banner900.png) no-repeat top left;
-    height: 60px;
+    height: 65px;
     margin-bottom: 1em;
 }
 
 #headeruid {
     background: #666 url(../images/banner-uid-900.png) no-repeat top left;
-    height: 60px;
+    height: 65px;
     margin-bottom: 1em;
 }
 
